third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/scale_codec_ui/codec_invalid_index.rs
#[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
#[codec(crate = ::parity_scale_codec)]
enum T {
	A = 3,
	#[codec(index = 524)]
	B,
}

fn main() {}
